//fixed helper not visible upon sorting
git-svn-id: https://kladecinfo.googlecode.com/svn/trunk@258 b2ecd63b-ce3e-1a2e-dd73-34ad02cb03ca

--- a/kladecytI/web/playlist.css
+++ b/kladecytI/web/playlist.css
@@ -9,7 +9,7 @@ body { height: 100%; }
 .slimScrollDiv { float:left; width: 100%; height: 100%; }
 .ui-sortable-helper { width: 50%; }
 .internalFrame { float: left; width: 100%; height: 50%; overflow-x: hidden; overflow-y: scroll; }
-.playlistFrame { float: left; width: 100%; height: 99%; overflow-x: hidden; overflow-y: hidden; }
+.playlistFrame { float: left; width: 100%; height: 99%; }
 .pti-state-default { float:left; cursor: default; width: 50%; height: 91px; }
 .pti-state-default > div { height: 90px; width:auto ; margin: 0.5px; }
 .pti-state-default { font-weight: normal/*{fwDefault}*/; color: #555555/*{fcDefault}*/; }
